--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -122,10 +122,10 @@
 
 	(setup (:pkg goto-chg))
 
+	(setq evil-want-keybinding nil)
+	(setq evil-want-integration t)
 	(setup (:pkg evil)
 		(setq evil-respect-visual-line-mode t)
-		(setq evil-want-integration t)
-		(setq evil-want-keybinding nil)
 		(setq evil-want-C-u-scroll t)
 		(setq evil-want-C-i-jump nil)
 		(setq evil-want-fine-undo t)
@@ -135,7 +135,7 @@
 		(evil-mode 1)
 
 		(define-key evil-insert-state-map (kbd "C-g") 'evil-normal-state)
-		(define-key evil-insert-state-map (kbd "C-h") 'evil-delete-backward-char-and-join)
+		(define-key evil-insert-state-map (kbd "C-d") 'evil-delete-backward-char-and-join)
 		;;(define-key evil-motion-state-map (kbd "SPC") nil)
 
 		;; Use visual line motions even outside of visual-line-mode buffers
@@ -222,9 +222,9 @@
 #+end_src
 **** Minor mode to infer indentation
 #+begin_src emacs-lisp
-	(setup (:pkg dtrt-indent)
-		;; Used to be config
-		(dtrt-indent-global-mode 1))
+	;;(setup (:pkg dtrt-indent)
+	;;	;; Used to be config
+	;;	(dtrt-indent-global-mode 1))
 #+end_src
 
 * Advanced UI Config
@@ -694,9 +694,9 @@
 		(:hook dtrt-indent-mode))
 
 	(setup (:pkg lsp-mode :straight t)
-		(:bind "TAB" indent-for-tab-command)
-		(:bind "M-TAB" insert-tab)
-		(:option lsp-headerline-breadcrumb-segments '(path-up-to-project file symbol)
+		(:bind "TAB" tab-to-tab-stop)
+		(:bind "M-TAB" indent-for-tab-command)
+		(:option lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols)
 						 lsp-clangd-binary-path "/usr/bin/clangd")
 
 		(sica/leader-key-def
@@ -838,7 +838,11 @@
 		;; https://github.com/brotzeit/rustic/issues/253 has been resolved this should
 		;; no longer be necessary.
 		(when buffer-file-name
-			(setq-local buffer-save-without-query t)))
+			(setq-local buffer-save-without-query t))
+		(setq tab-width 4)
+		(setq indent-tabs-mode nil))
+
+	(add-hook 'rustic-mode-hook 'sica/rustic-mode-hook)
 
 	(setup (:pkg rustic)
 		(:hook #'lsp-deferred)
@@ -848,8 +852,7 @@
 						 rustic-format-on-save-method 'rustic-format-buffer
 						 lsp-rust-analyzer-cargo-watch-command "clippy"
 						 lsp-rust-analyzer-server-display-inlay-hints t
-						 rustic-rustfmt-bin "/usr/bin/rustfmt")
-		(add-hook 'rustic-mode-hook #'sica/rustic-mode-hook))
+						 rustic-rustfmt-bin "/usr/bin/rustfmt"))
 #+end_src
 
 ** Go
@@ -864,7 +867,12 @@
 	(defun sica/c-mode-hook ()
 		(setq tab-width 4)
 		(setq c-default-style "linux")
-		(setq c-basic-offset 4))
+		(setq c-basic-offset 'tab-width)
+		(when (and (stringp buffer-file-name)
+							 (string-match "\\.sm\\'" buffer-file-name))
+			(setq tab-width 2)
+			(setq c-basic-offset 2)
+			(setq indent-tabs-mode nil)))
 
 	(setup c-mode
 		(:hook #'lsp-deferred
@@ -879,10 +887,11 @@
 		(:hook #'lsp-deferred
 					 #'sica/c-mode-hook)
 		(:file-match "\\.cpp\\'"
-								 "\\.cc\\'"))
+								 "\\.cc\\'"
+								 "\\.sm\\'"))
 
 	(setup lsp-clangd)
-		;(define-key c-mode-base-map (kbd "TAB") 'tab-to-tab-stop)
+	;(define-key c-mode-base-map (kbd "TAB") 'tab-to-tab-stop)
 #+end_src
 
 ** Python
@@ -905,7 +914,10 @@
 		(setq-default js-indent-level 2)
 		(setq-default evil-shift-width js-indent-level)
 		(setq-default tab-width 2))
-
+(add-to-list 'auto-mode-alist
+	'("\\.jsx?\\'" . js2-mode))
+(add-to-list 'auto-mode-alist
+	'("\\.tsx?\\'" . typescript-mode))
 	(setup (:pkg js2-mode)
 		(:hook #'lsp-deferred)
 		:file-match "\\.jsx?\\'"
@@ -924,11 +936,21 @@
 
 	(setup (:pkg typescript-mode)
 		(:hook #'lsp-deferred)
-		:mode "\\.ts\\'"
+		:file-match "\\.tsx?\\'"
 		;; Used to be config
 		(setq typescript-indent-level 2)
 		;; Used to be init
 		'(typescript-mode . (js-ts "--strict")))
+
+	(setup (:pkg vue-mode)
+		(:hook #'lsp-deferred)
+		:file-match "\\.vue\\'"
+		;; Used to be config
+		(setq typescript-indent-level 2)
+		(setq vue-indent-level 2)
+		;; Used to be init
+		'(typescript-mode . (js-ts "--strict")))
+
 
 #+end_src
 
