--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -157,6 +157,8 @@
   (scroll-bar-mode -1)
   (tooltip-mode -1)
   (global-display-line-numbers-mode 1)
+  (save-place-mode 1)
+  (global-auto-revert-mode 1)
   (set-fringe-mode 10)
 #+end_src
 **** Smooth Scrolling and Bar Cursor
